mpdscribble 0.18 - not yet released
  * improved detection of repeated songs
  * support MPD's new MusicBrainz tags
  * CURL can be used instead of libsoup at compile time


mpdscribble 0.17 - 2009-03-02
  * secure permissions for mpdscribble.conf
  * added "daemon_user" configuration option
  * escape '&'
  * import AS protocol v1.1 timestamps
  * support logging to stderr
  * add win32 support


mpdscribble 0.16 - 2009-01-17
  * support repeating a song
  * fix MPD 0.13 support (without "idle")
  * added pidfile support
  * daemonize mpdscribble by default, added option --no-daemon
  * moved debugging messages to verbose 3
  * changed default verbose level to 1
  * fix default value for "sleep"


mpdscribble 0.15 - 2009-01-04
  * re-enter idle mode if MPD is paused (fixes high CPU usage)
  * log with local time stamp
  * allow configuring the cleartext last.fm password


mpdscribble 0.14 - 2008-12-25
  * reformatted the whole source code (indentation with tabs)
  * support MPD's "idle" command (ignores the "sleep" setting)
  * resubmit "now playing" after re-handshake
  * turn off buffering for the log file
  * logging to syslog


mpdscribble 0.13 - 2008-12-19
  * libmpdclient update from upstream:
    - suport for Unix domain sockets
    - try all IP addresses from the resolver, resulting in better IPv6 support
    - smaller buffers, less memory usage
  * support the Last.fm Submissions Protocol v1.2
    - including support for 'now playing'
    - submit songs when they are finished
    - ignore seeking
    - now really support crossfading
    - support streaming
  * HTTP proxy support
  * support for libsoup 2.4
  * fixed several crash bugs
  * fixed gcc warnings


New in 0.2.12:

  - Just noticed a patch for 0.2.6 by Decklin Foster in my mailbox
    which i forgot to include in the subsequent releases. Sorry!

    It's included now and is a little bugfix for those who change
    the --sleep parameter.

New in 0.2.11:
